/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.rudder.api.rbac.v1;

option go_package = "github.com/tkeel-io/tkeel/api/rbac/v1;v1";
option java_multiple_files = true;
option java_package = "io.tkeel.rudder.api.rbac.v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // @msg=请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 1;
  // @msg=请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 2;
  // @msg=内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 3;
  // @msg=权限不存在
  // @code=NOT_FOUND
  ERR_PERMISSION_NOT_FOUND = 4;
  // @msg=角色不存在
  // @code=NOT_FOUND
  ERR_ROLE_NOT_FOUND = 5;
  // @msg=角色已存在
  // @code=INVALID_ARGUMENT
  ERR_ROLE_HAS_BEEN_EXSIST = 6;
  // @msg=用户不存在
  // @code=INVALID_ARGUMENT
  ERR_USER_NOT_FOUND = 7;
  // @msg=角色不可修改
  // @code=INVALID_ARGUMENT
  ERR_NOT_ALLOWED_EDIT = 8;
  // @msg=角色必须拥有至少一个绑定
  // @code=INVALID_ARGUMENT
  ERR_MUST_HAVE_ONE_BINDING = 9;
}